--- a/index.html
+++ b/index.html
@@ -9,103 +9,108 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+ /* From Uiverse.io by ilkhoeri */ 
+.wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-header {
-    background-color: #ff007f; /* سرخابی */
-    color: white;
-    text-align: center;
-    padding: 20px;
+.inner {
+  --w: 100px;
+  --h: 150px;
+  --translateZ: calc((var(--w) + var(--h)) + 0px);
+  --rotateX: -15deg;
+  --perspective: 1000px;
+  position: absolute;
+  width: var(--w);
+  height: var(--h);
+  top: 25%;
+  left: calc(50% - (var(--w) / 2) - 2.5px);
+  z-index: 2;
+  transform-style: preserve-3d;
+  transform: perspective(var(--perspective));
+  animation: rotating 20s linear infinite; /* */
+}
+@keyframes rotating {
+  from {
+    transform: perspective(var(--perspective)) rotateX(var(--rotateX))
+      rotateY(0);
+  }
+  to {
+    transform: perspective(var(--perspective)) rotateX(var(--rotateX))
+      rotateY(1turn);
+  }
 }
 
-nav {
-    background-color: #00bfff; /* آبی آسمانی */
+.card {
+  position: absolute;
+  border: 2px solid rgba(var(--color-card));
+  border-radius: 12px;
+  overflow: hidden;
+  inset: 0;
+  transform: rotateY(calc((360deg / var(--quantity)) * var(--index)))
+    translateZ(var(--translateZ));
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background: #0000
+    radial-gradient(
+      circle,
+      rgba(var(--color-card), 0.2) 0%,
+      rgba(var(--color-card), 0.6) 80%,
+      rgba(var(--color-card), 0.9) 100%
+    );
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-section {
-    padding: 20px;
-}
-
-footer {
-    background-color: #ff007f; /* سرخابی */
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
 </style>
 
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>رزومه من</title>
-</head>
-<body>
-    <header>
-        <h1>نام شما</h1>
-        <p>تخصص شما</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#about">درباره من</a></li>
-            <li><a href="#skills">مهارت‌ها</a></li>
-            <li><a href="#experience">تجربیات</a></li>
-            <li><a href="#contact">تماس با من</a></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>درباره من</h2>
-        <p>متن درباره شما...</p>
-    </section>
-    <section id="skills">
-        <h2>مهارت‌ها</h2>
-        <ul>
-            <li>مهارت ۱</li>
-            <li>مهارت ۲</li>
-            <li>مهارت ۳</li>
-        </ul>
-    </section>
-    <section id="experience">
-        <h2>تجربیات</h2>
-        <p>تجربه کاری شما...</p>
-    </section>
-    <footer id="contact">
-        <h2>تماس با من</h2>
-        <p>ایمیل: example@example.com</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+/* From Uiverse.io by ilkhoeri */ 
+<div class="wrapper">
+  <div class="inner" style="--quantity: 10;">
+    <div class="card" style="--index: 0;--color-card: 142, 249, 252;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 1;--color-card: 142, 252, 204;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 2;--color-card: 142, 252, 157;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 3;--color-card: 215, 252, 142;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 4;--color-card: 252, 252, 142;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 5;--color-card: 252, 208, 142;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 6;--color-card: 252, 142, 142;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 7;--color-card: 252, 142, 239;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 8;--color-card: 204, 142, 252;">
+      <div class="img"></div>
+    </div>
+    <div class="card" style="--index: 9;--color-card: 142, 202, 252;">
+      <div class="img"></div>
+    </div>
+  </div>
 </div>
 
-
-  <script>
-    // در اینجا می‌توانید کدهای جاوااسکریپت خود را اضافه کنید
-console.log("رزومه بارگذاری شد!");
-  </script>
 
 </body>
 </html>
