--- a/index.html
+++ b/index.html
@@ -3,113 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rotating Cards</title>
+    <title>رزومه من</title>
     <style>
-        .wrapper {
-            width: 100%;
-            height: 100vh; /* تغییر ارتفاع برای پر کردن صفحه */
-            position: relative;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+        }
+
+        header {
+            background-color: #d5006d; /* رنگ سرخابی */
+            color: white;
+            padding: 20px;
             text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
         }
 
-        .inner {
-            --w: 100px; 
-            --h: 150px; 
-            --translateZ: calc((var(--w) + var(--h)) + 0px);
-            --rotateX: -15deg; 
-            --perspective: 1000px; 
-            
-            position: absolute;
-            width: var(--w);
-            height: var(--h);
-            top: 25%;
-            left: calc(50% - (var(--w) / 2) - 2.5px);
-            z-index: 2;
-            transform-style: preserve-3d;
-            transform: perspective(var(--perspective));
-            animation: rotating 20s linear infinite; 
+        nav ul {
+            list-style-type: none;
+            padding: 0;
         }
 
-        @keyframes rotating {
-            from {
-                transform: perspective(var(--perspective)) rotateX(var(--rotateX)) rotateY(0);
-            }
-            to {
-                transform: perspective(var(--perspective)) rotateX(var(--rotateX)) rotateY(1turn);
-            }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
         }
 
-        .card {
-            position: absolute;
-            border: 2px solid rgba(var(--color-card));
-            border-radius: 12px;
-            overflow: hidden;
-            inset: 0;
-            transform: rotateY(calc((360deg / var(--quantity)) * var(--index))) translateZ(var(--translateZ));
+        nav ul li a {
+            color: white;
+            text-decoration: none;
         }
 
-        .img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            background:
-                #0000 radial-gradient(
-                    circle,
-                    rgba(var(--color-card), 0.2) 0%,
-                    rgba(var(--color-card), 0.6) 80%,
-                    rgba(var(--color-card), 0.9) 100%
-                );
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        .job {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        footer {
+            background-color: #d5006d; /* رنگ سرخابی */
+            color: white;
+            text-align: center;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="inner" style="--quantity: 10;">
-            <!-- Card 0 -->
-            <div class="card" style="--index: 0; --color-card: 142, 249, 252;">
-                <div class="img"></div>
+    <header>
+        <h1>نام شما</h1>
+        <p>عنوان شغلی شما</p>
+        <nav>
+            <ul>
+                <li><a href="#about">درباره من</a></li>
+                <li><a href="#skills">مهارت‌ها</a></li>
+                <li><a href="#experience">تجربه کاری</a></li>
+                <li><a href="#contact">تماس با من</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="about">
+            <h2>درباره من</h2>
+            <p>متن کوتاهی درباره خودتان بنویسید. می‌توانید در مورد تحصیلات، علایق و اهداف شغلی خود صحبت کنید.</p>
+        </section>
+
+        <section id="skills">
+            <h2>مهارت‌ها</h2>
+            <ul>
+                <li>مهارت ۱</li>
+                <li>مهارت ۲</li>
+                <li>مهارت ۳</li>
+                <li>مهارت ۴</li>
+            </ul>
+        </section>
+
+        <section id="experience">
+            <h2>تجربه کاری</h2>
+            <div class="job">
+                <h3>عنوان شغلی ۱ - نام شرکت</h3>
+                <p>تاریخ شروع - تاریخ پایان</p>
+                <p>توضیحاتی درباره وظایف و دستاوردهای خود در این شغل.</p>
             </div>
-            <!-- Card 1 -->
-            <div class="card" style="--index: 1; --color-card: 142, 252, 204;">
-                <div class="img"></div>
+
+            <div class="job">
+                <h3>عنوان شغلی ۲ - نام شرکت</h3>
+                <p>تاریخ شروع - تاریخ پایان</p>
+                <p>توضیحاتی درباره وظایف و دستاوردهای خود در این شغل.</p>
             </div>
-            <!-- Card 2 -->
-            <div class="card" style="--index: 2; --color-card: 142, 252, 157;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 3 -->
-            <div class="card" style="--index: 3; --color-card: 215, 252, 142;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 4 -->
-            <div class="card" style="--index: 4; --color-card: 252, 252, 142;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 5 -->
-            <div class="card" style="--index: 5; --color-card: 252, 208, 142;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 6 -->
-            <div class="card" style="--index: 6; --color-card: 252, 142, 142;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 7 -->
-            <div class="card" style="--index: 7; --color-card: 252, 142, 239;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 8 -->
-            <div class="card" style="--index: 8; --color-card: 204, 142, 252;">
-                <div class="img"></div>
-            </div>
-            <!-- Card 9 -->
-            <div class="card" style="--index: 9; --color-card: 142, 202, 252;">
-                <div class="img"></div>
-            </div>
-        </div>
-    </div>
+        </section>
+
+        <section id="contact">
+            <h2>تماس با من</h2>
+            <p>برای تماس با من، لطفاً از طریق ایمیل زیر اقدام کنید:</p>
+            <p><strong>Email:</strong> info@example.com</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 همه حقوق محفوظ است.</p>
+    </footer>
+
 </body>
 </html>
