--- a/index.html
+++ b/index.html
@@ -248,6 +248,17 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-theme-d3 w3-padding-16">
   <h5>Footer</h5>
+
+
+  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+    <a href="https://www.facebook.com/thesarinakasaiyan"> <i class="fa fa-facebook-official w3-hover-opacity"></i></a></i>
+    <a href="https://www.instagram.com/thesarinakasaiyan"> <i class="fa fa-instagram w3-hover-opacity"></i></a></i>
+    <a href="https://www.snapchat.com/thesarinakasaiyan"><i class="fa fa-snapchat w3-hover-opacity"></i></a></i>
+    <a href="https://www.pinterest.com/thesarinakasaiyan"> <i class="fa fa-pinterest-p w3-hover-opacity"></i></a></i>
+    <a href="https://www.twitter.com/kasaiyansarina"><i class="fa fa-twitter w3-hover-opacity"></i></a></i>
+    <a href="https://www.linkedin.com/sarinakasaiyan"> <i class="fa fa-linkedin w3-hover-opacity"></i></a></i>
+    <p class="w3-medium">باتشکر از توجه شما<a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green"></a></p>
+ 
 </footer>
 
 <footer class="w3-container w3-theme-d5">
