--- a/index.html
+++ b/index.html
@@ -110,17 +110,15 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
         <div class="w3-container">
           <p>Interests</p>
           <p>
-            <span class="w3-tag w3-small w3-theme-d5">News</span>
-            <span class="w3-tag w3-small w3-theme-d4">W3Schools</span>
-            <span class="w3-tag w3-small w3-theme-d3">Labels</span>
-            <span class="w3-tag w3-small w3-theme-d2">Games</span>
-            <span class="w3-tag w3-small w3-theme-d1">Friends</span>
-            <span class="w3-tag w3-small w3-theme">Games</span>
-            <span class="w3-tag w3-small w3-theme-l1">Friends</span>
-            <span class="w3-tag w3-small w3-theme-l2">Food</span>
-            <span class="w3-tag w3-small w3-theme-l3">Design</span>
-            <span class="w3-tag w3-small w3-theme-l4">Art</span>
-            <span class="w3-tag w3-small w3-theme-l5">Photos</span>
+            <span class="w3-tag w3-small w3-theme-d5">Robotic</span>
+            <span class="w3-tag w3-small w3-theme-d4">Reinforcement Learning </span>
+            <span class="w3-tag w3-small w3-theme-d3">Machine Learning</span>
+            <span class="w3-tag w3-small w3-theme-d2">Deep Learning</span>
+            <span class="w3-tag w3-small w3-theme-d1">Web developer</span>
+            <span class="w3-tag w3-small w3-theme">Front-end</span>
+            <span class="w3-tag w3-small w3-theme-l1">Back-end</span>
+            <span class="w3-tag w3-small w3-theme-l2">Natural language Processing (NLP)</span>
+            <span class="w3-tag w3-small w3-theme-l5">Brain computer Interface (BCI)</span>
           </p>
         </div>
       </div>
