--- a/slideshow.html
+++ b/slideshow.html
@@ -99,7 +99,7 @@ h1 {
 <div class="row">
   <div class="column nature">
     <div class="content">
-      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+      <img src="73_Page_177.png" alt="Mountains" style="width:100%">
       <h4>Mountains</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
