--- a/slideshow.html
+++ b/slideshow.html
@@ -131,7 +131,7 @@ h1 {
 <div class="row">
     <div class="column">
         <div class="content">
-            <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%" onclick="openModal(this)">
+            <img src="sarinakasaiyan.jpg" alt="Mountains" style="width:100%" onclick="openModal(this)">
             <h3>My Work</h3>
             <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam.</p>
         </div>
