--- a/slideshow.html
+++ b/slideshow.html
@@ -147,7 +147,7 @@ h1 {
 <div class="row">
     <div class="column nature">
         <div class="content">
-            <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%" onclick="openModal(this)">
+            <img src="sarinakasaiyan.jpg" alt="Mountains" style="width:100%" onclick="openModal(this)">
             <h4>Mountains</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
