--- a/Certificates.html
+++ b/Certificates.html
@@ -154,14 +154,14 @@ h1 {
     </div>
     <div class="column nature">
         <div class="content">
-            <img src="/w3images/lights.jpg" alt="Lights" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesNBML1.png" alt="Lights" style="width:100%" onclick="openModal(this)">
             <h4>Lights</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column nature">
         <div class="content">
-            <img src="/w3images/nature.jpg" alt="Nature" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesNBML2.png" alt="Nature" style="width:100%" onclick="openModal(this)">
             <h4>Forest</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
