--- a/Certificates.html
+++ b/Certificates.html
@@ -169,21 +169,21 @@ h1 {
 
     <div class="column cars">
         <div class="content">
-            <img src="/w3images/cars1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Retro</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="/w3images/cars2.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Fast</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="/w3images/cars3.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesManuscript Submission Skills1.png" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Classic</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
