--- a/Certificates.html
+++ b/Certificates.html
@@ -169,7 +169,7 @@ h1 {
 
     <div class="column cars">
         <div class="content">
-            <img src="CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesCovid19 1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Retro</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
