--- a/Certificates.html
+++ b/Certificates.html
@@ -176,7 +176,7 @@ h1 {
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Fast</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
