--- a/Certificates.html
+++ b/Certificates.html
@@ -147,7 +147,7 @@ h1 {
 <div class="row">
     <div class="column nature">
         <div class="content">
-            <img src="Certificates/Certificatesunesco1.png" alt="Mountains" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesArticle1.jpg" alt="Mountains" style="width:100%" onclick="openModal(this)">
             <h4>Mountains</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
@@ -176,7 +176,7 @@ h1 {
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="Certificates/CertificatesArticle1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/Certificatesunesco1.png " alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Fast</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
