--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
     </div>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
-    <img src="sarinakasaiyan.jpg" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
+    <img src="images/sarinakasaiyan.jpg" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
   </a>
  </div>
 </div>
@@ -150,7 +150,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       </div>
       
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-        <img src="sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">1 min</span>
         <h4>John Doe</h4><br>
         <hr class="w3-clear">
@@ -168,7 +168,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       </div>
       
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-        <img src="sarinakasaiyan.jpg.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">16 min</span>
         <h4>Jane Doe</h4><br>
         <hr class="w3-clear">
@@ -178,7 +178,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       </div>  
 
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
-        <img src="sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <img src="images/sarinakasaiyan.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">32 min</span>
         <h4>Angie Jane</h4><br>
         <hr class="w3-clear">
@@ -208,7 +208,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
           <p>Friend Request</p>
-          <img src="sarinakasaiyan.jpg" alt="Avatar" style="width:50%"><br>
+          <img src="images/sarinakasaiyan.jpg" alt="Avatar" style="width:50%"><br>
           <span>Jane Doe</span>
           <div class="w3-row w3-opacity">
             <div class="w3-half">
