--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
               <img src="images/RoboticBook.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
             </div>
             <div class="w3-half">
-          <td align="center"><video width="500" height="500" controls >
+          <td align="center"><video width="100"  controls >
       <source src="video/sarinakasaiyan.mp4" type="video/mp4">
     </video>
           </div>
