--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
   <h5>Footer</h5>
 </footer>
 
-<footer class="w3-container w3-theme-d5">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<footer class="" target="_blank">sarinakasaiyan</a></p>
 </footer>
  
 <script>
