--- a/Certificates.html
+++ b/Certificates.html
@@ -183,7 +183,7 @@ h1 {
     </div>
     <div class="column cars">
         <div class="content">
-            <img src="Certificates/CertificatesManuscript Submission Skills1.png" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesSharif Front end1.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Classic</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
@@ -191,21 +191,21 @@ h1 {
 
     <div class="column people">
         <div class="content">
-            <img src="/w3images/people1.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesManuscript Submission Skills1.png" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Girl</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column people">
         <div class="content">
-            <img src="/w3images/people2.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU2.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Man</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
     </div>
     <div class="column people">
         <div class="content">
-            <img src="/w3images/people3.jpg" alt="Car" style="width:100%" onclick="openModal(this)">
+            <img src="Certificates/CertificatesIAU1.HEIC" alt="Car" style="width:100%" onclick="openModal(this)">
             <h4>Woman</h4>
             <p>Lorem ipsum dolor..</p>
         </div>
